--- a/tex/tests.tex
+++ b/tex/tests.tex
@@ -62,7 +62,7 @@ these tests.
 The third calculation that was tested in this tool is the sweep-based intersection of line segments which
 is used in the main algorithm for intersections checks between polygons, as has been discussed in 
 chapter \ref{sec:angular_config_space}.
-The implementation is based on the algorithm given in Ref. \cite[pp. 69-80]{FUH_geo2020}.
+The implementation is based on the algorithm given in Ref. \cite[Ch. 2, pp. 69-80]{FUH_geo2020}.
 
 \begin{figure}[h]
 	\centering
@@ -168,7 +168,8 @@ is fulfilled during the algorithm run, meaning between function calls.
 Possible checks can either be fixed input values which are tested against known output values,
 or random inputs for which the correct output is calculated independently using a different 
 method than the one being tested, or even an external program.
-A comprehensive description of unit testing is given in Ref. \cite[Ch. 3, pp. 73-105]{FUH_prog2019}.
+A comprehensive description of unit testing is given in Ref. \cite[Ch. 3, pp. 84-127]{FUH_prog2019}.
+% \cite[Ch. 3, pp. 73-105]{FUH_prog2019}
 
 Unit tests allow to spot an error for which they are specifically designed. Conversely, they cannot 
 prove that a software is free of errors. Such a feat would be the task of software
