--- a/tex/notation.tex
+++ b/tex/notation.tex
@@ -73,6 +73,8 @@ Table \ref{tab:abbreviations} lists abbreviations that are used in this work.
 		\hline
 		CNC              & \underline{C}omputer \underline{N}umerical \underline{C}ontrol \cite{wiki_milling}. \tabularnewline
 		\hline
+		DOI              & \underline{D}igital \underline{O}bject \underline{I}dentifier. \tabularnewline
+		\hline
 		GCC              & \underline{G}NU \underline{C}ompiler \underline{C}ollection \cite{web_gcc}. \tabularnewline
 		\hline
 		GPU              & \underline{G}raphics \underline{P}rocessing \underline{U}nit. \tabularnewline
