--- a/tex/errata.tex
+++ b/tex/errata.tex
@@ -20,7 +20,7 @@ a mirror of the repository can be found here:
 It has furthermore been archived at this address:
 \url{https://archive.softwareheritage.org/browse/origin/?origin_url=https://code.ill.fr/scientific-software/takin/paths}.
 
-The latest version of the software's source code archive (ver-0.9) bears the 
+The latest version of the software's source code archive (ver-1.0) bears the 
 filename ``taspaths-oct21.tar.xz'' and has the SHA-256 \cite{web_sha256sum}
 checksum:
 
@@ -74,9 +74,9 @@ The layout of the software's source code archive is shown in table \ref{tab:sour
 \end{table}
 
 Development of the geometry library under \lstinline|./src/libs| and the auxiliary tools under \lstinline|./src/tools| 
-was already started in 2020, as preparation for the exam in Algorithmic Geometry, and they 
-are therefore based on the course materials \cite{FUH_geo2020}. 
-The library and tools were then further developed for this work, their separate code repository is available under 
+was already started in 2020, as preparation for the exam in Algorithmic Geometry, and their source code 
+is therefore based on the course materials \cite{FUH_geo2020}. 
+Afterwards, the library and tools have been further developed for this work, their separate code repository is available under 
 \url{https://github.com/t-weber/geo}, the software is furthermore registered under the DOI 
 \href{https://doi.org/10.5281/zenodo.4297475}{10.5281/zenodo.4297475}.
 
@@ -85,10 +85,11 @@ sub-directory \lstinline|./tlibs2|, but are not part of the present thesis.
 That library has already been developed since my diploma thesis \cite{DiplomaWeber} 
 and my PhD thesis \cite{PhDWeber}, as well as during several software 
 projects \cite{Weber2014, Takin2016, Takin2017, Takin2021}.
-Its full source code is included in the source archive merely for convenience.
+Its full source code is included in the source archive merely for the convenience of not
+having to search the correct version.
 Apart from using the \textit{tlibs} library, several code snippets are further developments
 of their counterparts from that library, among these the setup and build scripts for the various
-systems, as well as the \textit{OpenGL} renderer.
+systems, as well as the \textit{OpenGL} renderer and general-purpose code.
 
 
 \paragraph{Thesis source code}
