--- a/tex/implementation.tex
+++ b/tex/implementation.tex
@@ -7,14 +7,14 @@
 
 \chapter{Pathfinding Algorithm and Implementation}
 \label{ch:impl}
-
-In this chapter we describe the individual steps of the pathfinding strategy (see p. \pageref{sec:strategy})
-in detail and at the same time present an implementation in C++ \cite{Stroustrup2008, Stroustrup2018}. 
-Specifically, the latest version 20 of the C++ standard \cite{ISOCPP20} (C++20 in short)
-was employed in the creation of the software, together with the Boost C++ template libraries \cite{web_boost}. 
+Having outlined the general idea of the motion planning algorithm in the preceding chapter 
+(see p. \pageref{sec:strategy}), the present chapter describes the individual steps of the pathfinding strategy
+in detail. At the same time we present its implementation in C++ \cite{Stroustrup2008, Stroustrup2018}. 
+Here, specifically, the latest version 20 of the C++ standard \cite{ISOCPP20} (C++20 in short)
+is employed, together with the Boost C++ template libraries \cite{web_boost}. 
 The source code for the implementation can be found in the directory \lstinline|./src/core| 
 together with the library routines in \lstinline|./src/libs| of the accompanying software.
-Its Repository can be found at at \url{https://code.ill.fr/scientific-software/takin/paths}. 
+Its repository can be found at at \url{https://code.ill.fr/scientific-software/takin/paths}. 
 Stable versions of the source code have furthermore been registered under the DOI 
 \href{https://doi.org/10.5281/zenodo.4625649}{10.5281/zenodo.4625649}, please also refer to 
 appendix \ref{ch:online} for more details.
@@ -38,7 +38,7 @@ obstacles, as well as the floor as geometrical objects, for which positions and 
 calculated. In the implementation, all these components are modelled hierarchically, starting at the top with the class
 \lstinline[language=C++]|InstrumentSpace| which also serves as high-level interface for loading and saving
 the instrument geometry and states. A domain model diagram of the class hierarchy can be seen
-in Fig. \ref{ig:tas_class_hierarchy}.
+in Fig. \ref{fig:tas_class_hierarchy}.
 State changes in the class, for example the occurrence of a collision, are signalled to the outside world
 using the publish-subscribe mechanism via \textit{Boost.Signals2} \cite{web_boost_signals} library.
 The publish-subscribe mechanism is also known as observer pattern, for which a comprehensive description 
@@ -100,13 +100,13 @@ The situation is depicted in Fig. \ref{fig:tas_axes}.
 \begin{figure}
 	\begin{minipage}{0.45 \textwidth}
 		\begin{center}
-			\includegraphics[width = 0.75 \textwidth]{figures/axis}
+			\includegraphics[width = 0.7 \textwidth]{figures/axis}
 		\end{center}
 	\end{minipage}
 	%\hspace{1cm}
 	\begin{minipage}{0.45 \textwidth}
 		\begin{center}
-			\includegraphics[width = 0.95 \textwidth]{figures/axes}
+			\includegraphics[width = 0.9 \textwidth]{figures/axes}
 		\end{center}
 	\end{minipage}
 	\caption[Instrument axis coordinate systems.]{
@@ -131,7 +131,7 @@ The situation is depicted in Fig. \ref{fig:tas_axes}.
 \label{sec:buildpath}
 This section is dedicated to calculating the path mesh, which consists of all possible instrument paths between
 convex regions in configuration space. As seen in chapter \ref{sec:voro_median} and discussed in further detail
-in section \ref{sec:polygonal_voronoi_diagram}, this mesh is to be equivalent to the 1-skeleton of the obstacle
+in section \ref{sec:polygonal_voronoi_diagram}, this mesh is practically equivalent to the 1-skeleton of the obstacle
 boundary curves in configuration space.
 
 As discussed in chapter \ref{sec:tasrobot}, path mesh creation will be based on the angular configuration space
@@ -148,7 +148,7 @@ the possible angular configurations into bins. We therefore iterate through the 
 grid and create a bitmap of allowed and forbidden positions. The grid extends towards the scattering angles 
 $2\theta_S \in \left[ -180^{\circ},\, 180^{\circ} \right]$ and monochromator angles of 
 $2\theta_M \in \left[0^{\circ},\, 180^{\circ} \right]$, where, for the monochromator, we do
-not use the full angular range as this is not possible in real instruments which have the monochromator at a 
+not use the full angular range. The reason is that this is not possible in real instruments which have the monochromator at a 
 fixed position and only scatter in one direction. The sample scattering angle, on the other hand, needs the full 
 angular range as scattering on both sides of the axis is done in practice.
 
@@ -165,7 +165,7 @@ processor cores using the \lstinline[language=C++]|thread_pool| \cite{web_boost_
 \textit{Boost.Asio} \cite{web_boost_asio} asynchronous input/output library.
 A thread pool maintains a fixed number of threads, $n$, onto which it loads a variable number
 of tasks, $m$, where $m$ is usually larger than $n$. Each of the $n$ threads maintains a queue for the
-threads it receives and processes them sequentially. A good explanation fo thread pools can be 
+threads it receives and processes them sequentially. A good explanation for thread pools can be 
 found in Ref. \cite[pp. 273-299]{Williams2012}.
 
 With the given two-dimensional simplifications, we only need to distinguish three possible 
@@ -176,6 +176,7 @@ For efficiency, the actual calculations are only performed if the corresponding 
 one another's axis-aligned bounding boxes \cite{web_aabb}.
 
 \subsubsection*{Line-line intersections}
+We next proceed to describing the intersection calculations in a general manner.
 We realised two different methods for checking if two line segments intersect.
 
 \paragraph{Intersection check}
@@ -229,7 +230,7 @@ For an efficient handling of multiple line segment intersections, the decision f
 performed using the line segment sweep algorithm from Ref. \cite[Ch. 2.3.2, pp. 69-80]{FUH_geo2020} whose C++ implementation can be
 found in the function \lstinline[language=C++]|geo::intersect_sweep()| of the file \lstinline|./src/libs/lines.h| and which
 is also described in the book by Berg \textit{et al.} \cite[Ch. 2, pp. 19-43]{Berg2008}.
-We shortly summarise this algorithm and our implementation, following the description in \cite[Ch. 2.3.2, pp. 69-80]{FUH_geo2020}:
+We shortly summarise this algorithm and our implementation, following the descriptions in \cite[Ch. 2.3.2, pp. 69-80]{FUH_geo2020}:
 \begin{enumerate}
 	\item Possible events are kept in an event structure. Before the sweep, this is initialised with all the line segment
 		endpoints. The structure itself is a priority queue which sorts its elements by their $x$ coordinate in ascending order.
@@ -244,21 +245,25 @@ We shortly summarise this algorithm and our implementation, following the descri
 				The sweep status structure sorts the line segments according to their $y$ order at the current $x$ position
 				of the sweep line. It is implemented using \textit{Boost.Intrusive}'s \cite{web_boost_intrusive}
 				AVL tree class \cite{web_boost_intrusive_avltree} and can be found in the file \lstinline|./src/libs/trees.h|.
-			\item If the current event is the right endpoint of a line segment, the now inactive line segment is
-				removed from the sweep status structure and its preceding and succeeding line segments are tested
+			\item If the current event is the right endpoint of a line segment, the now already processed (inactive) line 
+				segment is removed from the sweep status structure and its preceding and succeeding line segments are tested
 				for intersection. A potential intersection is inserted into the event structure.
 			\item If the current event is an intersection point, the involved line segments are reported as intersecting
 				and, as they cross at this point, their order is flipped in the event structure.
 				After the flip, the intersecting line segments are tested against intersection with their new neighbours
 				and the possible intersection points are inserted into the event structure.
-				Note that in this method, we do need to calculate the actual intersection point, as it is at this point
-				that we need to swap the order of the lines.
+				Note that in this method, we do need to calculate the actual intersection point, even if we are not
+				interested in its exact position for the collision test.
+				The reason to calculate it is that it is at this point that we need to swap the order of 
+				the line segments.
 		\end{itemize}
 	\item Repeat from step 2.
 \end{enumerate}
 
 
 \subsubsection*{Line-circle intersections}
+The second type of intersection that can occur is the line-circle intersection, for example when a box-shaped object
+like a wall collides with a cylindrical one, like a pillar or a helium can placed in the instrument space.
 As with the line-line intersection, we keep the problem general and directly look at the $n$-dimensional problem.
 The intersection points between a line and an $n$-sphere are found by inserting the line equation 
 $\left|p\right> = \left|x_1\right> + \lambda \left|d\right>$ into the sphere equation 
@@ -274,7 +279,9 @@ The intersection points along the line are thus given by \cite{wiki_line_sphere_
 
 
 \subsubsection*{Circle-circle intersections}
-In this case we do not need the actual intersection points, so the calculation is restricted to checking if
+The third an final collision that can occur is that between two cylindrical objects, which is here flattened
+to a circle-circle intersection test.
+In this case we again do not need the actual intersection points, so the calculation is restricted to checking if
 the circles (or spheres) overlap. This is the case when the distance of their centres 
 $\left| x_1 \right>$ and $\left| x_2 \right>$ is less than the sum of their radii, $r_1$ and $r_2$, respectively:
 \begin{equation}
@@ -288,7 +295,7 @@ $\left| x_1 \right>$ and $\left| x_2 \right>$ is less than the sum of their radi
 \label{sec:walls_index_tree}
 Having discretised the angular configuration space on a grid based on the intersections of the instrument
 with the obstacle geometry or with itself, we next convert the positions
-of all occupied bins on the grid, which represent these obstacles, in the form of a spatial index tree,
+of all occupied bins on the grid, which represent these obstacles, into the form of a spatial index tree,
 as described in chapter \ref{sec:indextrees}.
 When calculating cost functions for different path finding strategies in one of the upcoming steps 
 (section \ref{sec:optimalpath}), we can make use of the index tree for efficiently querying
@@ -336,7 +343,8 @@ quantified contour. The situation is shown in panel (b).
 
 After creating the line segments from the traced contour lines, they have to be cleaned up and simplified,
 because the quantity of superfluous vertices would considerably slow down the generation of the Voronoi 
-diagram in a subsequent step of the path mesh building algorithm.
+diagram in a subsequent step of the path mesh building algorithm. An estimate of the calculation times was
+discussed in chapter \ref{sec:voronoi_libs}.
 In the function \lstinline[language=C++]|geo::simplify_contour()|, which resides in the file \lstinline|./src/libs/hull.h|,
 we perform two simplification steps:
 
@@ -379,7 +387,7 @@ involving the previous and the next vertex, respectively, are below a given smal
 
 \subsection{Generation of convex regions}
 \label{sec:convex_regions}
-The regions that were generated by contour tracing and line-segment generation in the previous steps are in general concave.
+The regions that were generated by contour tracing and line-segment generation in the previous steps are, in general, concave.
 This can pose a problem, because we also need to be able to move the instrument into positions near concave angles
 of the region's vertices, which generate ``alcoves'' in the region, see the next section for a discussion.
 
@@ -429,7 +437,7 @@ A visualisation and example run of the algorithm is shown in Fig. \ref{fig:conto
 As we are interested in the instrument path that is at the farthest position 
 from walls, we need to calculate the Voronoi diagrams for the line segments 
 that constitute these obstacles. 
-In a second step, we group line segments into objects in to remove bisecting lines 
+In a second step, we group line segments into objects in order to remove bisecting lines 
 coming from the same object.
 Please refer to chapter \ref{sec:voro} for a description of Voronoi diagrams, and
 specifically to chapter \ref{sec:voro_ls} for line segment diagrams.
@@ -494,7 +502,7 @@ section \ref{sec:exepath}.
 \paragraph{Implementation details}
 The collection of normal and inverted regions is calculated in the member function
 \lstinline[language=C++]|CalculateLineSegments()| of the \lstinline[language=C++]|PathsBuilder|
-class, which resides in file \lstinline|./src/core/PathsBuilder.cpp|. 
+class, which resides in file \lstinline|PathsBuilder.cpp| of the directory \lstinline|./src/core/|. 
 The Voronoi diagram of these regions is calculated in the member function
 \lstinline[language=C++]|PathsBuilder::CalculateVoronoi()|.
 It calls the backend function \lstinline[language=C++]|geo::calc_voro()|, which is part
@@ -530,8 +538,11 @@ see the discussion in chapter \ref{sec:voro_ls}.
 		Panel (a): Ungrouped line segments and their Voronoi bisectors.
 		Panel (b): The same line segments, but with each polygonal region grouped.
 		The Voronoi diagram is only calculated between groups, not within the same group.
+		These diagrams used in practice for the determination of tool paths \cite{Jeong1998, wiki_milling}.
 		Panel (c): A mixture of the first two cases, where not entire regions are grouped
 		as in case (b), but where each convex sub-region forms its own group.
+		This case is closely related to the medial axis or 1-skeleton, which is a 
+		generalised Voronoi diagram \cite[p. 111]{Boissonnat2006}.
 		\label{fig:linesegs_grouped_voro}}
 \end{figure}
 
@@ -651,7 +662,7 @@ determined using the spatial index tree that has been generated in a previous st
 (section \ref{sec:walls_index_tree}).
 
 A demonstration of the effect of the cost functions is depicted in Fig. \ref{fig:path_finding_strategies}.
-More information on robot motion in potential function can be found in the notes by H. Choset \ref{Choset2010_ch4}.
+More information on robot motion in potential function can be found in the notes by H. Choset \cite{Choset2010_ch4}.
 
 
 \begin{figure}[h]
@@ -684,7 +695,7 @@ using the standard C++ functions \lstinline[language=C++]|std::make_heap()| and
 As it is compact enough and since it is representative of the design and coding styles of the software
 in general, the implementation is printed in full in listing \ref{lst:dijkstra}.
 Note that the implementation is generic, because it does not insist on a specific class
-for the underlying graph. Instead it keeps the graph type, \lstinline[language=C++]|t_graph|, open and
+for the underlying graph. Instead, it keeps the graph type, \lstinline[language=C++]|t_graph|, open and
 only requires that it fulfill the template concept \cite{cppwiki_concepts}
 \lstinline[language=C++]|is_graph|, which is given in listing \ref{lst:graph_concept}.
 For the software package, we offer two graph implementations, one based on the adjacency list, the
@@ -832,7 +843,7 @@ in the second part. These positions can either be given as crystal coordinates o
 
 The implementation of this algorithm so far is in the form of a C++ library. Several user interfaces, among them a
 graphical one, have also been developed. These are described in chapter \ref{ch:gui}.
-But before that, the upcoming chapter first describes some necessary basic concepts that are needed for the 
+But before that, the upcoming chapter first introduces some necessary basic concepts that are needed for the 
 graphical representation of the data.
 
 % -----------------------------------------------------------------------------
